--- a/resources/sass/main-style.scss
+++ b/resources/sass/main-style.scss
@@ -9,11 +9,21 @@
 }
 
 body {
-    background-color: $off-white;
     margin-top: -20px;
     transition: all 1s ease-out;
-    overflow-x: hidden;
     min-height: 100vh;
+}
+
+#wrapper {
+    background-color: $off-white;
+    position: relative;
+    right: 0;
+    transition: all .5s ease-out;
+}
+
+#wrapper.active {
+    right: 150px;
+    box-shadow: 1px 2px 10px rgba($color: #000000, $alpha: .5);
 }
 
 .container {
